first commit / installation de redux

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /*modif en dessous*/
+  min-height: 100vh;
+
 }
 
 code {
