--- a/src/style/Profil.css
+++ b/src/style/Profil.css
@@ -75,3 +75,23 @@
     border: var(--main-color);
     color: #fff;
 }
+
+.showForm-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.update-button {
+    margin-bottom: 10px;
+    padding: 10px;
+    background-color: var(--main-color);
+    border-color: var(--main-color);
+    color: #fff;
+    font-weight: bold;
+}
+
+.names-label {
+    color: #fff;
+    margin-bottom: 3px;
+}
