Folder, new components, new file swaggeer.yaml

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,4 +1,13 @@
-@import './root.css';
+* {
+
+    font-family: Avenir, Helvetica, Arial, sans-serif;
+    text-decoration: none;
+}
+
+:root {
+    --text-color: #2c3e50;
+    --main-color: #00bc77;
+}
 
 footer {
     border-top: 2px solid #ccc;
