--- a/src/components/account/Account.css
+++ b/src/components/account/Account.css
@@ -16,7 +16,7 @@
     justify-content: space-between;
     background-color: #fff;
     width: 80%;
-    height: 140px;
+
     padding: 24px;
     margin: auto 0;
     margin-bottom: 32px;
@@ -50,6 +50,8 @@
     font-weight: normal;
 }
 
+
+
 .transaction-button {
     width: 100%;
     padding: 8px;
@@ -59,4 +61,14 @@
     background-color: var(--main-color);
     border: var(--main-color);
     color: #fff;
+}
+
+@media screen and (max-width: 769px) {
+    .account {
+        flex-direction: column;
+    }
+
+    .transacBt-wrapper {
+        width: 100%;
+    }
 }
