--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -8,10 +8,13 @@
     background-position: 0 -50px;
 }
 
-.home-banner img {
-    object-fit: cover;
-    height: 100%;
-    width: 100%;
+.home-banner {
+    background-image: url(../assets/img/bank-tree.jpeg);
+    background-position: 0 -50px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 300px;
+    position: relative;
 }
 
 .banner-txt-box {
@@ -48,7 +51,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    width: 100%;
+
     padding: 40px;
     flex: 1;
     color: var(--text-color);
@@ -67,4 +70,33 @@
     font-size: 1.25rem;
     font-weight: bold;
     margin-bottom: 0.5rem;
+}
+
+@media screen and (max-width: 769px) {
+    .abouts-box {
+        flex-direction: column;
+    }
+
+    .home-banner {
+
+        background-position: 0% 33%;
+    }
+
+    .banner-txt-box {
+
+        top: 2rem;
+        width: 50%;
+        background: white;
+        text-align: left;
+        margin: 0;
+
+    }
+
+    .big-text {
+        font-size: 1rem;
+    }
+
+    .lil-text {
+        font-size: 0.9rem;
+    }
 }
