--- a/src/style/Login.css
+++ b/src/style/Login.css
@@ -60,3 +60,11 @@
     border-bottom: 1px solid #fff;
 
 }
+
+@media screen and (max-width: 769px) {
+    .log-form {
+
+        width: 70%;
+    }
+
+}
