--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -10,7 +10,7 @@
 
 .home-banner {
     background-image: url(../assets/img/bank-tree.jpeg);
-    background-position: 0 -50px;
+    background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
     height: 300px;
