--- a/src/components/account/Account.css
+++ b/src/components/account/Account.css
@@ -18,7 +18,7 @@
     width: 80%;
 
     padding: 24px;
-    margin: auto 0;
+    margin: 0 auto;
     margin-bottom: 32px;
     text-align: left;
     box-sizing: border-box;
