--- a/src/components/item/item.css
+++ b/src/components/item/item.css
@@ -26,8 +26,8 @@
 }
 
 .item-title {
-
-    color: #222;
+    color: var(--text-color);
+    /* Utilisation de la variable principale pour la couleur */
     font-size: 1.25rem;
     font-weight: bold;
     margin-bottom: 0.5rem;
