--- a/src/components/account/Account.css
+++ b/src/components/account/Account.css
@@ -53,14 +53,16 @@
 
 
 .transaction-button {
+    display: block;
     width: 100%;
     padding: 8px;
     font-size: 1.1rem;
     font-weight: bold;
-    margin-top: 16px;
-    background-color: var(--main-color);
-    border: var(--main-color);
+    margin-top: 1rem;
+    border-color: #00bc77;
+    background-color: #00bc77;
     color: #fff;
+    white-space: nowrap;
 }
 
 @media screen and (max-width: 769px) {
@@ -71,4 +73,5 @@
     .transacBt-wrapper {
         width: 100%;
     }
+
 }
